--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <h3>Bienvenido a <%= title %></h3>
 El portal donde podra crear sus propios juegos
-<p><a href="/quizes/question">Comience a jugar</a></p>
+<p><a href="/quizes">Comience a jugar</a></p>
 
