--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,16 +6,20 @@
 <% var i; for(i = 0; i < quizes.length; i++){ %>
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
-		<td>
-			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-					Borrar
-				</button>
-			</form>
-		</td>
+		<%if(session.user){%>
+			<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+			<td>
+				<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+					<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+						Borrar
+					</button>
+				</form>
+			</td>
+		<%}%>
 		<td><%= quizes[i].tema %></td>
 	</tr>
 <% } %>
 </table>
-<a href="/quizes/new" style="text-decoration:none;"><button type="button" />Crear pregunta</a>
+<%if(session.user){%>
+	<a href="/quizes/new" style="text-decoration:none;"><button type="button" />Crear pregunta</a>
+<%}%>
